--- a/src/assets/css/widgets.scss
+++ b/src/assets/css/widgets.scss
@@ -196,5 +196,12 @@ $themeRadius: 6px;
   margin-right: 8px !important;
 }
 .mu-expansion-panel-content {
-    padding: 8px 18px 24px !important;
+  padding: 8px 18px 24px !important;
+}
+
+.battery-text {
+  font-size: 0.6rem;
+  word-break: break-word;
+  max-width: 14px;
+  margin-right: -4px;
 }
