--- a/src/assets/css/widgets.scss
+++ b/src/assets/css/widgets.scss
@@ -48,6 +48,8 @@ $themeRadius: 6px;
     display: flex;
     text-align: center;
     flex: 1 0 auto;
+    align-items: center;
+    margin: 5px 0;
   }
   .cmd.icon > i {
     font-size: 3rem;
@@ -68,7 +70,6 @@ $themeRadius: 6px;
   .cmd.icon > i {
     display: block;
     text-align: center;
-    margin-top: 0.7rem;
   }
 }
 
@@ -197,6 +198,11 @@ $themeRadius: 6px;
 }
 .mu-expansion-panel-content {
   padding: 8px 18px 24px !important;
+}
+.mu-bottom-nav {
+  -webkit-box-shadow: 0px -4px 17px -5px rgba(0,0,0,0.58);
+  -moz-box-shadow: 0px -4px 17px -5px rgba(0,0,0,0.58);
+  box-shadow: 0px -4px 17px -5px rgba(0,0,0,0.58);
 }
 
 .battery-text {
